<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Word Story</string>

    <string name="add_round">Add Round</string>
    <string name="an_error_occurred">an error occurred</string>
    <string name="answer">answer</string>
    <string name="ask">ask</string>
    <string name="done">done</string>
    <string name="enter">enter</string>
    <string name="examples">Examples</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="hard_mode_description">Any revealed hints must be used in subsequent guesses</string>
    <string name="high_contrast_mode">High Contrast Mode</string>
    <string name="high_contrast_mode_description">For improved color vision</string>
    <string name="how_to_play">how to play</string>
    <string name="maximum_win_streak">maximum\nwin streak</string>
    <string name="next">next</string>
    <string name="next_word">next word</string>
    <string name="no_thanks">No Thanks</string>
    <string name="not_enough_letters">Not Enough Letters</string>
    <string name="play">play</string>
    <string name="played">played</string>
    <string name="previous">previous</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="round_over">Round Over</string>
    <string name="share_the_app">share the app</string>
    <string name="submit">submit</string>
    <string name="thank_you_for_your_valuable_review">Thank you for your valuable review</string>
    <string name="try_again">Try Again</string>
    <string name="version">Version</string>
    <string name="vibrate">Vibrate</string>
    <string name="winning_streak">winning\nstreak</string>
    <string name="won">won</string>
    <string name="word_not_found">Word not found</string>
    <string name="write_review">Write review</string>

    <string-array name="ordinal_numbers">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th+</item>
    </string-array>

    <string name="hard_mode_000"> letter must be </string>
    <string name="hard_mode_001">Guess must contain </string>

    <string name="how_to_play_000">
        Guess the <b>WORDLE</b> in six tries.\n\n
        Each guess must be a valid five-letter word. Hit the enter button to submit.\n\n
        After each guess, the color of the tiles will change to show how close your guess was to the word.
    </string>
    <string name="how_to_play_001">The letter <b>W</b> is in the word and in the correct spot.</string>
    <string name="how_to_play_002">The letter <b>I</b> is in the word but in the wrong spot.</string>
    <string name="how_to_play_003">The letter <b>U</b> is not in the word in any spot.</string>

    <string name="review_000">Thank you for your valuable review</string>
</resources>