<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="@drawable/background_round_over">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/round_over"
            android:textColor="@color/text"
            android:textSize="22dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button_try_again"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/try_again" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button_add_round"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/material_button_try_again"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/add_round"
            app:icon="@drawable/ic_round_paid_24"
            app:iconTint="@color/yellow_500" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button_no_thanks"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_family_maplestory"
        android:text="@string/no_thanks"
        android:textColor="@color/white" />

</RelativeLayout>